--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-nodered",
+  "name": "@nodeknit/app-nodered",
   "type": "module",
   "version": "1.0.0",
   "typings": "index.d.ts",
@@ -11,7 +11,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@nodeknit/app-manager": "^1.0.0-build.0",
+    "@nodeknit/app-manager": "commit",
     "@types/node-red": "^1.3.5"
   },
   "dependencies": {
